--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,12 @@
     </dependency>
     <!-- 引入log4j -->
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <groupId> org.apache.logging.log4j </groupId>
+      <artifactId>log4j-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId> org.apache.logging.log4j </groupId>
+      <artifactId>log4j-core</artifactId>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
     <dependency>
