--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
 
   <parent>
     <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId><!-- 依赖管理 -->
-    <version>2.0.0.RELEASE</version>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.2.4.RELEASE</version>
+    <relativePath/>
   </parent>
 
 
@@ -30,6 +31,30 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <!-- MyBatis -->
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+    <!-- MySQL -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter-test</artifactId>
+      <version>1.3.2</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- 数据库连接池 -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid-spring-boot-starter</artifactId>
+      <version>1.1.9</version>
     </dependency>
     <!-- spring boot核心,包括自动配置支持，日志和YAML -->
     <dependency>
@@ -40,6 +65,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
+    <!-- <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis-spring</artifactId>
+        <version>1.2.0</version>
+    </dependency> -->
     <!-- DevTools in Spring Boot 项目热部署 -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -54,15 +85,43 @@
       <groupId> org.apache.logging.log4j </groupId>
       <artifactId>log4j-core</artifactId>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis-spring -->
-    <dependency>
-      <groupId>org.mybatis</groupId>
-      <artifactId>mybatis-spring</artifactId>
-      <version>1.2.0</version>
-    </dependency>
   </dependencies>
 
   <build>
+    <resources>
+      <!-- <resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+					<include>cn/azoff/money/**/*.xml</include>
+				</includes>
+				<filtering>false</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>**/*.properties</include>
+					<include>cn/azoff/money/**/*.xml</include>
+				</includes>
+				<filtering>false</filtering>
+			</resource>
+
+			<resource>
+		        <directory>src/main/java</directory>
+		        <excludes>
+		          <exclude>**/*.java</exclude>
+		        </excludes>
+		      </resource>
+		      <resource>
+		        <directory>src/main/resources</directory>
+		        <includes>
+		          <include>**/*.*</include>
+		        </includes>
+		      </resource>
+		</resources> -->
+    </resources>
     <plugins>
       <!-- spring boot maven插件，可以将项目打包成一个可执行的jar文件 -->
       <plugin>
